[frontend] scheduleShare 1차 수정
-Timeline pictureList style update
- scheduleShare 캘린더
- profile 일정 Style update

--- a/frontend/src/Components/Timeline/Timeline.css
+++ b/frontend/src/Components/Timeline/Timeline.css
@@ -5,11 +5,13 @@
   width: 866px;
   height: 100%;
   box-shadow: 0px 1px 2px rgba(161, 159, 159, 0.8);
-  background-color: white;
+  background-color: #ffffff;
   padding: 5px;
-  margin-bottom: 10px;
 }
 
+.timeline-Margin {
+  margin-bottom: 50px;
+}
 .timeline-profile {
   position: relative;
   display: flex;
