[frontend] 투두리스트 모든 작업 완료
- 캘린더 '전체공개', '팔로워만', '친구만', '나만보기' 추가

--- a/frontend/src/Components/Calendar/Calendar.css
+++ b/frontend/src/Components/Calendar/Calendar.css
@@ -15,6 +15,7 @@
   width: 515px;
   height: 75px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 20px;
