--- a/frontend/src/Components/Timeline/Timeline.css
+++ b/frontend/src/Components/Timeline/Timeline.css
@@ -70,6 +70,7 @@
   width: 300px;
   height: 60px;
   font-size: 18px;
+  font-weight: bold;
 }
 
 .profile-time {
@@ -112,6 +113,38 @@
   height: 340px;
   padding-left: 10px;
   overflow: hidden;
+}
+
+.timeline-shareForm {
+  position: relative;
+  box-shadow: 0px 1px 3px rgba(161, 159, 159, 0.8);
+  margin-left: 10px;
+  margin-bottom: 15px;
+  width: 480px;
+  height: 330px;
+  padding: 10px;
+  overflow: hidden;
+  border-radius: 5px;
+}
+.timeline-shareForm:hover {
+  cursor: pointer;
+  box-shadow: 1px 1px 5px rgba(100, 100, 100, 0.9);
+}
+.timeline-share-userInfo > img {
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+  box-shadow: 0px 1px 3px rgba(161, 159, 159, 0.8);
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.timeline-share-userInfo {
+  display: flex;
+  padding-bottom: 10px;
+  align-items: center;
+}
+.timeline-share-userInfo > div {
+  font-weight: bold;
 }
 
 .timeline-picture > img {
