--- a/frontend/src/Components/default.css
+++ b/frontend/src/Components/default.css
@@ -100,19 +100,24 @@ footer{
     background-color: lightgray;
 } */
 /* 스크롤 css */
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
   border-radius: 8px;
+  background-color: transparent;
+  position: relative;
 }
 
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
+  -webkit-appearance: none;
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background-color: lightgray;
-}
-
+  position: relative;
+  z-index: -1;
+} */
+/* ::-webkit-transform: t ranslate3d(0, 0, 0) */
 input:focus {
   outline: none;
 }
