--- a/frontend/src/Components/Profile/ProfilePage.css
+++ b/frontend/src/Components/Profile/ProfilePage.css
@@ -155,6 +155,7 @@ nav > div {
   flex-wrap: wrap;
   align-self: center;
   margin: 10px 0px;
+  margin-bottom: '50px';
 }
 .profile-MediaTimeline {
   display: flex;
