--- a/frontend/src/Components/Timeline/Timeline.css
+++ b/frontend/src/Components/Timeline/Timeline.css
@@ -367,3 +367,8 @@ fieldset {
 .transition-all {
   transition: all 0.3s ease-out;
 }
+.clicked {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(161, 159, 159, 0.2);
+}
