[frontend] 일정추가시 게시글추가 요청 보냄
자잘한 오류수정
캘린더 className에 id값 맨뒤로 수정

--- a/frontend/src/Components/default.css
+++ b/frontend/src/Components/default.css
@@ -59,6 +59,12 @@ button {
   align-items: center;
 }
 
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* nav{
     display: flex;
     align-items: center;
