--- a/frontend/src/Components/Main/mainPage.css
+++ b/frontend/src/Components/Main/mainPage.css
@@ -109,6 +109,8 @@ aside > .aside-profile {
   display: flex;
   flex-direction: column;
   border-radius: 5px;
+  right: -30px;
+  bottom: 80px;
 }
 
 .chatting-cell {
@@ -123,7 +125,9 @@ aside > .aside-profile {
 .chatting-list {
   position: absolute;
   right: 0;
+  bottom: 0;
   height: 100%;
+  width: 100%;
   background-color: white;
   display: flex;
   flex-direction: column;
