--- a/frontend/src/Components/default.css
+++ b/frontend/src/Components/default.css
@@ -155,6 +155,14 @@ input:focus {
   animation: loading 1.2s ease-in-out infinite;
 }
 
+.hover {
+  background-color: white;
+}
+
+.hover:hover {
+  background-color: #eee;
+}
+
 @keyframes loading {
   0% {
     background-position: 100% 50%;
