--- a/frontend/src/Components/Loading/Loading.css
+++ b/frontend/src/Components/Loading/Loading.css
@@ -16,7 +16,7 @@
 .sk-cube-grid .sk-cube {
   width: 33%;
   height: 33%;
-  background-color: RGB(255, 223, 75);
+  background-color: rgb(20, 81, 51);
   float: left;
   -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
   animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
