--- a/frontend/src/Components/Timeline/Timeline.css
+++ b/frontend/src/Components/Timeline/Timeline.css
@@ -304,6 +304,7 @@ fieldset {
 }
 .recomment-reply-users-img {
   height: 30px;
+  width: 30px;
 }
 .recomment-reply-users-img > img {
   width: 30px;
