[frontend] Fix bug 1
프로필 페이지 - 팔로워 팔로우 리스트 출력
프로필 페이지 - All 탭일시 - 일정들 탭 색상으로 반영
프로필 페이지 - 게시물 좋아요 누를시 바로 반영안됨
프로필 페이지 - 일정 수정시 일정탭 안 보임
프로필 페이지 - 상태메세지 줄바꿈 X
프로필 페이지 - 일정 추가폼 취소버튼 X
로그인 - 비밀번호 안 맞을 시 : 로그인에 실패하였습니다 -> 아이디/비밀번호를 확인해주세요 등으로 바꿔야 할 듯
사용자가 주소로 사이트 들어갈 시 - 로그인되어 있으면 main 페이지 띄우기
Aside 리스트 - 소문자 대문자 구분 안 됨

--- a/frontend/src/Components/Other/SearchField.css
+++ b/frontend/src/Components/Other/SearchField.css
@@ -6,9 +6,13 @@
   padding: 10px;
   height: 50px;
   background-color: rgba(20, 81, 51, 0.9);
+  color: white;
+  font-size: 20px;
 }
 .searchField-result-list {
   padding: 10px;
+  height: 444px;
+  overflow-y: scroll;
 }
 .group-follow_change {
   display: flex;
@@ -18,7 +22,8 @@
   display: flex;
   justify-content: space-between;
   width: 320px;
-  margin-top: 10px;
+  border-bottom: 1px solid #eee;
+  padding: 6px 0px;
 }
 .MuiTabs-flexContainer {
   justify-content: center;
