--- a/frontend/src/Components/Timeline/Timeline.css
+++ b/frontend/src/Components/Timeline/Timeline.css
@@ -98,12 +98,10 @@
 
 .timeline-info {
   display: flex;
-  height: 470px;
 }
 
 .timeline-picture-info {
   display: flex;
-  height: 440px;
   flex-direction: column;
 }
 
@@ -116,6 +114,8 @@
 }
 
 .timeline-shareForm {
+  flex-direction: column;
+  display: flex;
   position: relative;
   box-shadow: 0px 1px 3px rgba(161, 159, 159, 0.8);
   margin-left: 10px;
@@ -167,7 +167,7 @@
 
 .timeline-context {
   max-width: 490px;
-  max-height: 116px;
+  max-height: 100px;
   margin-left: 10px;
   margin-top: 5px;
   border: 1px solid rgb(229, 229, 229);
