--- a/frontend/src/Components/Timeline/Timeline.css
+++ b/frontend/src/Components/Timeline/Timeline.css
@@ -323,7 +323,13 @@ fieldset {
   border-radius: 50%;
   box-shadow: 0px 1px 3px rgba(161, 159, 159, 0.8);
 }
-
+.group-post-user > img {
+  width: 22px;
+  height: 22px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0px 1px 3px rgba(161, 159, 159, 0.8);
+}
 .show-more-comment {
   display: flex;
   align-items: center;
