--- a/frontend/src/Components/Header/header.css
+++ b/frontend/src/Components/Header/header.css
@@ -116,3 +116,15 @@ header {
   background-color: rgba(209, 204, 192, 0.2);
   cursor: pointer;
 }
+.GroupAdd {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(209, 204, 192, 0.2);
+}
+.GroupAdd:hover {
+  cursor: pointer;
+  background-color: rgb(255, 212, 170);
+}
