--- a/frontend/src/Components/Other/SearchField.css
+++ b/frontend/src/Components/Other/SearchField.css
@@ -3,11 +3,12 @@
   width: 100%;
 }
 .searchField-title {
-  padding: 10px;
+  padding: 0px 10px;
   height: 50px;
   background-color: rgba(20, 81, 51, 0.9);
   color: white;
-  font-size: 20px;
+  font-size: 22px;
+  line-height: 50px;
 }
 .searchField-result-list {
   padding: 10px;
