--- a/frontend/src/Components/Header/header.css
+++ b/frontend/src/Components/Header/header.css
@@ -23,6 +23,8 @@ header {
   margin-right: 10px;
   width: 40px;
   height: 40px;
+  display: flex;
+  justify-content: center;
 }
 .title-icon > a > img {
   height: 40px;
