--- a/frontend/src/Components/Other/SearchField.css
+++ b/frontend/src/Components/Other/SearchField.css
@@ -11,7 +11,7 @@
   line-height: 50px;
 }
 .searchField-result-list {
-  padding: 10px;
+  padding: 0px 10px;
   height: 444px;
   overflow-y: scroll;
 }
