--- a/frontend/src/Components/Header/header.css
+++ b/frontend/src/Components/Header/header.css
@@ -111,8 +111,12 @@ header {
   flex-direction: column;
 }
 .notify-list-time {
-  color: rgb(209, 204, 192);
+  color: lightgray;
 }
+#header-right > div > div .MuiButton-text {
+  padding: 6px 0px !important;
+}
+
 /* TodoList */
 .before-todo:hover {
   background-color: rgba(209, 204, 192, 0.2);
