--- a/frontend/src/Components/Timeline/Timeline.css
+++ b/frontend/src/Components/Timeline/Timeline.css
@@ -387,3 +387,12 @@ fieldset {
   height: 100%;
   background-color: rgba(161, 159, 159, 0.2);
 }
+.share-schedule-style {
+  width: 100%;
+  height: 100%;
+  padding: 0px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 115px;
+}
